# advent-of-code-2024

./: .gitignore  CMakeLists.txt  README.md
d01/: .gitignore  CMakeLists.txt  main
d01/part1/src/: main.cpp
d01/part2/: CMakeLists.txt
d01/part2/src/: main.cpp
d01/src/: main.cpp
d02/: CMakeLists.txt
d02/src/: main.cpp
d03/: CMakeLists.txt
d04/: CMakeLists.txt
d04/src/: main.cpp
d05/: CMakeLists.txt
d05/src/: main.cpp
d06/: CMakeLists.txt
d06/src/: guard.cpp  guard.h  main.cpp
d07/: CMakeLists.txt
d07/src/: main.cpp
d08/: CMakeLists.txt
d08/src/: main.cpp
d09/: CMakeLists.txt
d09/src/: main.cpp
d10/: CMakeLists.txt
d10/src/: main.cpp
d11/: CMakeLists.txt
d11/src/: main.cpp
d12/: CMakeLists.txt
d12/src/: main.cpp
d13/: CMakeLists.txt
d13/src/: main.cpp
d14/: CMakeLists.txt
d14/src/: main.cpp  robot.cpp  robot.h  room.cpp  room.h
d15/: CMakeLists.txt
d15/src/: main.cpp
d16/: CMakeLists.txt
d16/src/: Coordinates.cpp  Coordinates.h  Reindeer.cpp  Reindeer.h  main.cpp
d17/: CMakeLists.txt
d17/src/: main.cpp  uint3_t.cpp
d18/: CMakeLists.txt
d18/src/: coordinates.cpp  coordinates.h  main.cpp
d19/: CMakeLists.txt  main.cpp
src/d02/: main.cpp
src/d03/: main.cpp
src/d04/: main.cpp
src/d05/: main.cpp
src/d06/: guard.h  main.cpp
src/d12/: main.cpp
src/d13/: main.cpp
src/d14/: main.cpp
src/d15/: main.cpp
src/d15/.cache/clangd/index/: main.cpp.1F23C944FEC722F8.idx
src/d16/: coordinates.cpp  main.cpp
src/d17/: uint3_t.h
src/d18/: main.cpp
src/d19/: main.cpp
(+3 files in other folders)
